--- a/frontend/src/pages/adde.css
+++ b/frontend/src/pages/adde.css
@@ -17,10 +17,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
-    padding: 10px;
     /* Use a max-width to prevent overflow on large screens */
     max-width: 100%;
 }
@@ -32,6 +30,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 90%;
+    height: 100%;
     max-width: 400px;
     padding: 20px;
     margin: 0 auto;
